--- a/Documents/lybrary/archinstall/baremetal_configuration.json
+++ b/Documents/lybrary/archinstall/baremetal_configuration.json
@@ -143,7 +143,7 @@
         "firefox",
         "ncdu",
         "tmux",
-        "bashtop",
+        "btop",
         "edk2-ovmf",
         "network-manager-applet",
         "htop",
@@ -168,6 +168,8 @@
 	"meld",
 	"usbguard",
 	"clamav",
+	"nmap",
+	"ffmpeg",
 	"marked"
 
     ],
